--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ Don't let it be a hurdle to getting started.
 					<h2>Putting it all together</h2>
 
 					<p>Starting with <a href="https://gist.githubusercontent.com/fomightez/964a77bf8d5f89e443a3/raw/6b419814cc3a6c5a25ef79e827fb339af6f0ee43/latlon3.py">this example</a> , can you write a program to convert DNA fasta to mRNA?</p>
-						<p class="fragment">example, [DNA_to_RNAsimple.py](https://gist.github.com/fomightez/f73300b7be3a982d6b09)</p>
+						<p class="fragment">example, <a href="https://gist.github.com/fomightez/f73300b7be3a982d6b09">DNA_to_RNAsimple.py</a></p>
 				</section>
 
 
