--- a/index.html
+++ b/index.html
@@ -204,10 +204,24 @@ For all the other lines, we want replace 't' with 'u' elsewhere.
 
 						- Perl
 						- Java
+						- R
 						- [Antha](http://www.antha-lang.org/)
 						- many others
 					</script>
 				</section>
+
+
+				<section data-markdown>
+					<script type="text/template">
+						## Why code in Python?
+						On the following slides, I am going to try to convince you that Python is a good language to learn...
+
+						but honestly, as long as you actively develop, the exact language does not matter that much. See [here](http://www.sitepoint.com/whats-best-programming-language-learn-2015/?utm_content=bufferaa412&utm_medium=social&utm_source=twitter.com&utm_campaign=buffer) if you want to hear this from others.
+
+					</script>
+				</section>
+
+
 
 
 
