update options for languages
update options for languages from common to more niche but still emphasizing not all all inclusive. (I was intrigued by a Python variant called Coconut so I wanted to note it somewhere as well.)

--- a/index.html
+++ b/index.html
@@ -203,8 +203,10 @@ For all the other lines, we want replace 't' with 'u' elsewhere.
 						Examples:
 
 						- Perl
-						- Java
 						- R
+						- Java
+						- [Scala](http://www.scala-lang.org/)
+						- [Coconut ](http://coconut.readthedocs.io/en/master/HELP.html#introduction)
 						- [Antha](http://www.antha-lang.org/)
 						- many others
 					</script>
